style sheets css config

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,27 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+h1 {
+  font-size: 50px;
+  font-weight: 600;
+  font-style: normal;
+}
+
+h2 {
+  font-size: 44px;
+  font-weight: 600;
+  font-style: normal;
+}
+
+h3 {
+  font-size: 36px;
+  font-weight: 600;
+  font-style: normal;
+}
+
+body {
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+}
