--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,9 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+$primary-colour: #008080;
+$secondary-colour: #FF6B5C;
+$background-colour: #FAF9F6;
+$body-font-colour: #2E2E2E;
+$gray-shade-colour: #D9D8D8;
