--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -13,6 +13,7 @@ $font-size-base:         1rem;
 // Colors
 $body-color: $body-font-colour;
 $primary:    $primary-colour;
+$secondary: $secondary-colour;
 $success:    $green; // may need to change
 $info:       $yellow;
 $danger:     $red;
