--- a/app/assets/stylesheets/components/_card_booking.scss
+++ b/app/assets/stylesheets/components/_card_booking.scss
@@ -1,4 +1,4 @@
-.card-basics {
+.booking-card-basics {
   background: $gray-shade-colour;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   padding: 20px 50px 20px 50px;
@@ -6,7 +6,7 @@
   border-radius: 25px;
 }
 
-.card-image {
+.booking-card-image {
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   width: 200px;
   border-radius: 25px;
