--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,6 +15,11 @@
   <% end %>
 </div>
 
+<div class = "map">
+<h3>Explore Boards on the Map</h3>
+<div id = "map"></div>
+</div>
+
 
   <div class="info-section">
   <h1>How it works ?</h1>
