--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,10 @@
 
-
+<div class ="hero-banner">
 <div class="hero-section">
   <h1>Find the perfect surfboard in Bali</h1>
   <p>Trusted by 10,000+ surfers</p>
   <%= link_to "Let's Go", surfboards_path, class: "lets-go-btn" %>
+</div>
 </div>
 
 <div class="card-grid">
@@ -11,18 +12,19 @@
     <div class="card">
       <h5><%= surfboard.category %></h5>
       <p><%= surfboard.location %></p>
+      <%= image_tag surfboard.image_url %>
     </div>
   <% end %>
 </div>
 
-<div class = "map">
-<h3>Explore Boards on the Map</h3>
-<div id = "map"></div>
+<div class = "map-section">
+  <h3>Explore Boards on the Map</h3>
+    <div id = "map"></div>
 </div>
 
 
   <div class="info-section">
-  <h1>How it works ?</h1>
+    <h1>How it works ?</h1>
 
   <div class="how-it-works">
     <div class="how-step">
