--- a/app/assets/stylesheets/components/_card_booking.scss
+++ b/app/assets/stylesheets/components/_card_booking.scss
@@ -1,13 +1,24 @@
-.booking-card-basics {
+.booking-card-overall {
   background: $gray-shade-colour;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  padding: 20px 50px 20px 50px;
-  width: 600px;
+  height: 400px;
+  width: 800px;
   border-radius: 25px;
 }
 
 .booking-card-image {
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  width: 200px;
-  border-radius: 25px;
+  height: 100%;
+  border-radius: 25px 0px 0px 25px;
+}
+
+.booking-card-body {
+  padding: 35px 50px 20px 50px;
+}
+
+.left-body {
+  width: 800px;
+}
+
+.right-body {
+
 }
