--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 
 <div class ="hero-banner">
-<div class="hero-section">
-  <h1>Find the perfect surfboard in Bali</h1>
-  <p>Trusted by 10,000+ surfers</p>
-  <%= link_to "Let's Go", surfboards_path, class: "lets-go-btn" %>
-</div>
+  <div class="hero-section">
+    <h1>Find the perfect surfboard in Bali</h1>
+    <p>Trusted by 10,000+ surfers</p>
+    <%= link_to "Let's Go", surfboards_path, class: "lets-go-btn" %>
+  </div>
 </div>
 
 <div class="card-grid">
@@ -19,7 +19,11 @@
 
 <div class = "map-section">
   <h3>Explore Boards on the Map</h3>
-    <div id = "map"></div>
+     <div style="width: 100%; height: 600px;"
+    data-controller="map"
+    data-map-markers-value="<%= @markers.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
 </div>
 
 
