--- a/app/views/surfboards/new.html.erb
+++ b/app/views/surfboards/new.html.erb
@@ -13,11 +13,14 @@
         <%= f.input :tail, collection: Surfboard::TAIL_TYPES, prompt: "Select a tail type", input_html: { class: 'rounded-input' } %>
         <%= f.input :location, input_html: { class: 'rounded-input' } %>
         <%= f.input :price, input_html: { class: 'rounded-input' } %>
+        <%= f.input :photo, as: :file %>
         <%= f.submit "Add Surfboard", class: "btn btn-primary mt-3 w-100" %>
       <% end %>
     </div>
+    <div><%= cl_image_tag @surfboard.photo.key, height: 300, width: 400, crop: :fill %>
+    </div>
 
-    <div class="col-md-6 p-4 d-flex flex-column align-items-center justify-content-center">
+    <div class="col-md-6 p-4 d-flex flex-column align-items-center justify-content-center d-none">
       <div class="image-placeholder d-flex align-items-center justify-content-center mb-3">
         <i class="fa-solid fa-camera fa-3x text-muted"></i>
         <%# If you had an image field in your form, you'd put it here %>
