changed pages#home to incl functionality for nil image for pre-production

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
     <div class="card">
       <h5><%= surfboard.category %></h5>
       <p><%= surfboard.location %></p>
-      <%= image_tag surfboard.image_url %>
+       <img src= <%= surfboard.image_url%> />
     </div>
   <% end %>
 </div>
