--- a/app/assets/stylesheets/components/_card_booking.scss
+++ b/app/assets/stylesheets/components/_card_booking.scss
@@ -12,13 +12,13 @@
 }
 
 .booking-card-body {
-  padding: 35px 50px 20px 50px;
+  padding: 35px 20px 20px 50px;
 }
 
 .left-body {
   width: 800px;
 }
 
-.right-body {
-
+.surfboard-info {
+  line-height: 95%;
 }
