--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,33 @@
 <div class="container d-flex pt-5" data-controller="price-update" data-price-update-rate-value= <%= @surfboard.price %>>
-  <div class="left-body p-4" style="margin-right: 50px">
+  <div class="left-body" style="margin-right: 100px">
+    <div class="booking-card-overall d-flex">
+      <div class="booking-card-image-div">
+        <img src=<%= @surfboard.image_url %> alt="surfboard" class="booking-card-image">
+      </div>
+      <div class="booking-card-body">
+          <h4>Surfboard details</h4>
+          <hr>
+          <div class="surfboard-info">
+            <p><%= image_tag "location_icon.png", alt: "Icon", width: 15 %>
+            Location: <b><%= @surfboard.location %></b></p>
+            <p><%= image_tag "surfboard_icon.png", alt: "Icon", width: 15 %>
+            Category: <b><%= @surfboard.category %></b></p>
+            <p><%= image_tag "tail_icon.png", alt: "Icon", width: 15 %>
+            Size: <b><%= @surfboard.size %></b></p>
+            <p><%= image_tag "size_icon.png", alt: "Icon", width: 15 %>
+            Tail: <b><%= @surfboard.tail %></b></p>
+            <p><%= image_tag "owner_icon.png", alt: "Icon", width: 15 %>
+            Owner: <b><%= @surfboard.user.email %></b></p>
+            <p><%= image_tag "price_icon.png", alt: "Icon", width: 15 %>
+            Daily rate: <b>$<%= @surfboard.price %></b></p>
+            <p><%= image_tag "star_icon.png", alt: "Icon", width: 15 %>
+            Review: <b>Every board is perfect</b></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="right-body">
     <h1 class="pb-4">Book now!</h1>
     <div>
         <%= simple_form_for [@surfboard, @booking]   do |f| %>
@@ -9,29 +37,9 @@
           <%= f.input :end_date,
             as: :string,
             input_html: { data: { controller: "datepicker", price_update_target: "endDate", action: "input->price-update#update" } } %>
+          <p data-price-update-target="totalPrice">Select dates</p>
           <%= f.submit class: "btn btn-secondary" %>
         <% end %>
-    </div>
-  </div>
-
-  <div class="right-body">
-    <div class="booking-card-overall d-flex">
-      <div class="booking-card-image-div">
-        <img src=<%= @surfboard.image_url %> alt="surfboard" class="booking-card-image">
-      </div>
-      <div class="booking-card-body">
-        <h3 data-price-update-target="totalPrice">Select dates</h3>
-        <hr>
-        <div>
-          <p><h4>Surfboard details</h4></p>
-          <div class="">
-              <p>Location: <b><%= @surfboard.location %></b></p>
-              <p>Category: <b><%= @surfboard.category %></b></p>
-              <p>Size: <b><%= @surfboard.size %></b></p>
-              <p>Tail: <b><%= @surfboard.tail %></b></p>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
