--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,3 +14,4 @@ $secondary-colour: #FF6B5C;
 $background-colour: #FAF9F6;
 $body-font-colour: #2E2E2E;
 $gray-shade-colour: #D9D8D8;
+$light-shade-colour: #e3e3e3;
