--- a/app/assets/stylesheets/components/_card_booking.scss
+++ b/app/assets/stylesheets/components/_card_booking.scss
@@ -22,3 +22,17 @@
 .surfboard-info {
   line-height: 95%;
 }
+
+.review-box {
+  width: 60%;
+}
+
+.rating-box {
+  color: $primary-colour;
+}
+
+.comment-box {
+  padding: 20px;
+  vertical-align: middle;
+  line-height: 80%;
+}
