completed first_name and last_name for User

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -48,6 +48,7 @@
     <div class="col-md-6 p-4 d-flex flex-column align-items-center justify-content-center d-none">
       <div class="image-placeholder d-flex align-items-center justify-content-center mb-3">
         <i class="fa-solid fa-user fa-3x"></i>
+        <%= image_tag("bali-surfer.jpg") %>
       </div>
       <button class="btn btn-secondary mt-3" type="button">Add Profile Image</button>
     </div>
