Le Wagon Day 34 Booking Index Owner of Surfboard Added to Name

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -69,7 +69,7 @@
           <div class="card-product-infos">
             <%# add user name tommorow %>
             <div class="header-price">
-              <h2><%=  booking.user.email %></h2>
+              <h2> Owner: <%=  booking.surfboard.user.email %></h2>
               <p>
                 Total Price
                 <strong><%= '%.2f' % booking.total_price%>k IDR</strong>
