minor adjustments done

--- a/app/views/surfboards/index.html.erb
+++ b/app/views/surfboards/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="text-center">Find your <span class="highlight-word">perfect</span> board!</h2>
+  <h2 class="text-center mt-3">Find your <span class="highlight-word">perfect</span> board!</h2>
   <br>
   <div class="row rounded-pill py-3 bg-opacity-10 bg-light">
     <%= form_with url: surfboards_path, method: :get, class: "d-flex gap-3 justify-content-center" do %>
@@ -27,9 +27,9 @@
         </div>
       <% end %>
     </div>
+    <br>
+    <h3><span class="highlight-word align-text-center"><%= @noresults ? "Sorry, no boards match your research" : "" %></span></h3>
   </div>
-
-  <br>
 
 
   <br>
@@ -38,7 +38,7 @@
   <div class="d-flex">
     <div class="cardslist">
       <% @surfboards.each do |surfboard| %>
-        <div class="card" style="width: 18rem;">
+        <div class="card border-0 shadow-sm" style="width: 18rem;">
           <% if surfboard.photo.attached? %>
             <%= cl_image_tag surfboard.photo.key, class: "board-img" %>
           <% else  %>
