--- a/app/assets/stylesheets/components/_cardlist.scss
+++ b/app/assets/stylesheets/components/_cardlist.scss
@@ -41,7 +41,7 @@
 .cardslist {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 15px 10px;
+  gap: 15px;
   padding-inline: 20px;
   font-size: 12px;
 }
