--- a/app/views/surfboards/_info_window.html.erb
+++ b/app/views/surfboards/_info_window.html.erb
@@ -1,14 +1,16 @@
-<%# <div class="card" style="width: 9rem;"> %>
+<div class="info-window">
   <% if surfboard.photo.attached? %>
     <%= cl_image_tag surfboard.photo.key, class: "board-img", style:"width: 100%" %>
   <% else  %>
-    <%= image_tag "surfboard_placeholder.png", class: "board-img" %>
+    <%= image_tag "surfboard_placeholder.png", class: "board-img", style:"width:100%" %>
   <% end %>
   <div class="card-body">
-  <div class="d-inline justify-content-between">
-    <p class="card-title mb-0"><strong><%= surfboard.category %></strong> in <%= surfboard.location %></p>
-    <p><strong><%= surfboard.price %></strong> /day</p>
-  </div>
+    <div class="d-inline justify-content-between">
+      <p class="card-title mb-0"><strong><%= surfboard.category %></strong> in <%= surfboard.location %></p>
+      <p><strong><%= surfboard.price %></strong> /day</p>
+    </div>
+    <div>
       <%= link_to "Check it now!", new_surfboard_booking_path(surfboard), class: "btn btn-secondary"%>
+    </div>
   </div>
-<%# </div> %>
+</div>
