IDR added to the cards

--- a/app/views/surfboards/index.html.erb
+++ b/app/views/surfboards/index.html.erb
@@ -46,7 +46,7 @@
           <div class="card-body">
           <div class="d-inline justify-content-between">
             <p class="card-title mb-0"><strong><%= surfboard.category %></strong> in <%= surfboard.location %></p>
-            <p><strong><%= surfboard.price %></strong> /day</p>
+            <p><strong><%= surfboard.price %></strong>k IDR/day</p>
           </div>
               <%= link_to "Check it now!", new_surfboard_booking_path(surfboard), class: "btn btn-secondary"%>
           </div>
