--- a/app/views/surfboards/_info_window.html.erb
+++ b/app/views/surfboards/_info_window.html.erb
@@ -7,7 +7,7 @@
   <div class="card-body">
     <div class="d-inline justify-content-between">
       <p class="card-title mb-0"><strong><%= surfboard.category %></strong> in <%= surfboard.location %></p>
-      <p><strong><%= surfboard.price %></strong> /day</p>
+      <p><strong><%= surfboard.price %></strong>k IDR /day</p>
     </div>
     <div>
       <%= link_to "Check it now!", new_surfboard_booking_path(surfboard), class: "btn btn-secondary"%>
