--- a/app/views/surfboards/index.html.erb
+++ b/app/views/surfboards/index.html.erb
@@ -37,20 +37,9 @@
   <div class="d-flex">
     <div class="cardslist">
       <% @surfboards.each do |surfboard| %>
-        <div class="card border-0 shadow-sm" style="width: 18rem;">
-          <% if surfboard.photo.attached? %>
-            <%= cl_image_tag surfboard.photo.key, class: "board-img" %>
-          <% else  %>
-            <%= image_tag "surfboard_placeholder.png", class: "board-img" %>
-          <% end %>
-          <div class="card-body">
-          <div class="d-inline justify-content-between">
-            <p class="card-title mb-0"><strong><%= surfboard.category %></strong> in <%= surfboard.location %></p>
-            <p><strong><%= surfboard.price %></strong>k IDR/day</p>
-          </div>
-              <%= link_to "Check it now!", new_surfboard_booking_path(surfboard), class: "btn btn-secondary"%>
-          </div>
-        </div>
+        <%= link_to new_surfboard_booking_path(surfboard), class:"no-decoration"  do %>
+          <%= render "cardindex", surfboard: surfboard %>
+        <% end %>
       <% end %>
     </div>
     <div style="width: 100%; height: 600px; position: sticky; top: 0; height: 100vh;"
