--- a/app/views/surfboards/index.html.erb
+++ b/app/views/surfboards/index.html.erb
@@ -23,7 +23,7 @@
       </div>
         <div>
           <p></p>
-          <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+          <%= submit_tag "Search", name: "", class: "btn btn-secondary" %>
         </div>
       <% end %>
     </div>
