--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -147,41 +147,47 @@ p {
 .signup-btn:hover {
   background-color: #00796b;
 }
+
+.hero-banner {
+  background-image: url("background_4");
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+}
+
 .hero-section {
-  padding: 60px 24px 40px 24px; /* top, right, bottom, left */
   max-width: 1100px;
-  margin: 0 auto;
+  line-height: 120%;
+  padding: 30px 100px 0px 0px;
 }
 
-.hero-section h1 {
-  font-size: 48px;
-  font-weight: bold;
-  margin-bottom: 16px;
+.hero-tag-one {
+  padding: 0px 100px 0px 0px;
 }
 
-.hero-section p {
-  font-size: 18px;
-  margin-bottom: 24px;
+.hero-tag-two {
+  padding: 0px 0px 0px 100px;
 }
 
-.lets-go-btn {
-  display: inline-block;
-  background-color: #009688; /* teal */
-  color: white;
-  padding: 12px 28px;
-  font-size: 16px;
-  font-weight: bold;
-  border: none;
-  border-radius: 6px;
-  text-decoration: none;
-  transition: background-color 0.3s ease;
-  cursor: pointer;
-  margin-top: 12px;
+.hero-tag-sub {
+  color: $background-colour;
+  font-size: 20px;
+  padding: 150px 0px 0px 0px;
 }
 
-.lets-go-btn:hover {
-  background-color: #00796b;
+.hero-border {
+  border: 0px solid red;
 }
+
+.go-to-app-btn {
+  width: 200px;
+  padding: 12px 12px 12px 12px;
+  margin: 0px 0px 0px 0px;
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
 .map-section {
   margin: 60px auto;
   max-width: 1100px;
@@ -194,15 +200,7 @@ p {
   border-radius: 8px;
   box-shadow: 0 4px 12px rgpa(0,0,0,0.1);
 }
-.hero-banner {
-  background-image: url("background_img");
-  background-size: cover;
-  background-position: center;
-  padding: 120px 24px;
-  color: white;
-  text-align: center;
-  position: relative;
-}
+
 .step-number {
   display: inline-block;
   font-size: 28px;
