--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,22 @@
 
-<div class ="hero-banner">
-  <div class="hero-section">
-    <h1>Find the perfect surfboard in Bali</h1>
-    <p>Trusted by 10,000+ surfers</p>
-    <%= link_to "Let's Go", surfboards_path, class: "lets-go-btn" %>
+<div class ="hero-banner d-flex justify-content-end align-items-start hero-border">
+  <div class="hero-section hero-border">
+      <div class="hero-tag-one hero-border">
+        <h1>Find the <span class="highlight-word">perfect</span></h1>
+      </div>
+      <div class="hero-tag-two hero-border">
+        <h1><span class="highlight-word">surfboard</span> in Bali</h1>
+      </div>
+      <div class="hero-border d-flex justify-content-center">
+        <div class="hero-border">
+          <div class="hero-tag-sub">
+            <p><i>Trusted by 10,000+ surfers</i></p>
+          </div>
+          <div class="hero-border d-flex justify-content-center">
+            <%= link_to "Rent a board", surfboards_path, class: "btn btn-secondary go-to-app-btn" %>
+          </div>
+        </div>
+      </div>
   </div>
 </div>
 
@@ -59,26 +72,27 @@
     <div class="card">
       <h5><%= surfboard.category %></h5>
       <p><%= surfboard.location %></p>
-       <img src= <%= surfboard.image_url%> />
+      <% if surfboard.photo.attached? %>
+            <%= cl_image_tag surfboard.photo.key%>
+          <% else  %>
+            <%= image_tag "surfboard_placeholder.png"%>
+          <% end %>
     </div>
   <% end %>
 </div>
 
+<div class ="footer">
+  <h1>Ready to start?</h1>
+  <br>
+  <%= link_to 'Create your account', new_user_registration_path, class: "signup-btn" %>
+</div>
+
 <div class = "map-section">
   <h1 class ="sub-heading" >Explore Boards on the Map</h1>
+  <br>
      <div style="width: 100%; height: 600px;"
     data-controller="map"
     data-map-markers-value="<%= @markers.to_json %>"
     data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
-</div>
-
-
-
-
-
-
-<div class ="footer">
-  <h3>Ready to start?</h3>
-  <%= link_to 'Create your account', new_user_registration_path, class: "signup-btn" %>
 </div>
